@@ -50,3 +50,4 @@ helpfile +shelp text/staffhelp
 access +shelp staff
 #
 # Define local aliases/parameters/whatnot here.
+module sample
